use external lib

--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "devDependencies": {
     "@types/node": "^22.13.9",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@gltf-transform/core": "^4.1.2",
+    "@gltf-transform/extensions": "^4.1.2",
+    "@types/draco3dgltf": "^1.4.3",
+    "draco3dgltf": "^1.5.7"
   }
 }
